Started implementing mails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ logging.level.guru.springframework.blogs.controllers=INFO
 logging.level.org.hibernate=ERROR
 logging.file=logs/spring-boot-logging.log
 log4j.logger.org.thymeleaf=DEBUG
-
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -13,3 +12,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+#Mails
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=teststefan73@gmail.com
+spring.mail.password=testqwerty123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
